addedCicnews
